Fixed text alignment for recipe detail

--- a/src/app/recipe/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.scss
@@ -4,7 +4,7 @@ dt {
 }
 dd {
   font-size: 16px;
-  margin-bottom: 20px;
+  margin: 0 0 20px;
 }
 .container {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
